<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="SuperHero"
            type="org.iesch.a02_registro_de_superheroes.model.SuperHero" />


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_hero"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@android:drawable/ic_menu_camera" />

        <EditText
            android:id="@+id/et_hero_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image_hero"
            android:layout_alignTop="@id/image_hero"
            android:hint="@string/hero_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/et_alter_ego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image_hero"
            android:layout_alignBottom="@id/image_hero"
            android:hint="@string/alter_ego_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_below="@id/image_hero"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/text_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginTop="16dp"
            android:text="@string/bio"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"

            />

        <EditText
            android:id="@+id/et_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_bio"
            android:layout_marginTop="16dp"
            android:hint="@string/descripcion_biografica"/>

        <TextView
            android:id="@+id/text_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_bio"
            android:layout_marginTop="32dp"
            android:text="@string/poder"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/black"

            />

        <RatingBar
            android:id="@+id/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_power"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:progressTint="@color/yellow" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_marginTop="16dp"
            android:layout_alignParentBottom="true"
            />






    </RelativeLayout>
</layout>